--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ body{
     flex-direction: column;
 }
 
+img {
+    width: 250;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+}
+
+
 
 
 
@@ -77,7 +85,7 @@ a:hover{
 /*HAMBURGER MENU*/
 
 #hamburger-nav {
-    display: none;
+    display: flex;
 }
 
 .hamburger-menu {
